--- a/src/main/resources/views/contract/contractNew.fxml
+++ b/src/main/resources/views/contract/contractNew.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.PassengerController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.ContractController">
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <MenuBar>
@@ -69,19 +69,19 @@
                </font>
             </Label>
             <ChoiceBox fx:id="projectId" layoutX="250.0" layoutY="83.0" prefWidth="150.0" />
+               <ChoiceBox fx:id="customerId" layoutX="250.0" layoutY="155.0" prefWidth="150.0" />
             <TextField fx:id="discount" layoutX="250.0" layoutY="221.0" promptText="Descuento" />
+               <DatePicker fx:id="deadline" layoutX="250.0" layoutY="278.0" promptText="Fecha limite" />
+               <ChoiceBox fx:id="paymentSchedule" layoutX="250.0" layoutY="329.0" prefWidth="150.0" />
             <Button layoutX="371.0" layoutY="440.0" mnemonicParsing="false" onAction="#save" text="Guardar" />
             <Button layoutX="261.0" layoutY="440.0" mnemonicParsing="false" onAction="#clearScreen" text="Limpiar" />
             <Button layoutX="146.0" layoutY="440.0" mnemonicParsing="false" onAction="#goToHome" text="Cancelar" />
-               <Label fx:id="message" layoutX="269.0" layoutY="470.0" textFill="#e40c0c" />
-               <ChoiceBox fx:id="customerId" layoutX="250.0" layoutY="155.0" prefWidth="150.0" />
+               <Label fx:id="message" layoutX="117.0" layoutY="470.0" prefHeight="17.0" prefWidth="377.0" textFill="#e40c0c" />
                <Label alignment="CENTER" layoutX="49.0" layoutY="331.0" style="&#10;" text="Periodo de pago" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
                   <font>
                      <Font size="18.0" />
                   </font>
                </Label>
-               <ChoiceBox fx:id="paymentSchedule" layoutX="250.0" layoutY="329.0" prefWidth="150.0" />
-               <DatePicker fx:id="deadline" layoutX="250.0" layoutY="278.0" promptText="Fecha limite" />
          </children>
       </AnchorPane>
    </children>
