--- a/src/main/resources/views/customer/customerFind.fxml
+++ b/src/main/resources/views/customer/customerFind.fxml
@@ -2,11 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.PassengerController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.CustomerController">
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <MenuBar VBox.vgrow="NEVER">
@@ -59,7 +59,7 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label alignment="CENTER" graphicTextGap="5.0" layoutX="221.0" layoutY="14.0" style="&#10;" text="Resultado de busqueda" textAlignment="CENTER" textFill="#2c0404" wrapText="false">
+        <Label alignment="CENTER" graphicTextGap="5.0" layoutX="220.0" layoutY="14.0" style="&#10;" text="Buscar Pasajero" textAlignment="CENTER" textFill="#2c0404" wrapText="false">
           <font>
             <Font size="18.0" />
           </font>
@@ -67,8 +67,27 @@
                   <Bloom threshold="0.95" />
                </effect>
         </Label>
-            <Button layoutX="283.0" layoutY="292.0" mnemonicParsing="false" onAction="#goToHome" text="Regresar" />
-            <ListView fx:id="passengerList" layoutX="27.0" layoutY="68.0" onMouseClicked="#goToDetails" prefHeight="200.0" prefWidth="588.0" />
+            <Label alignment="CENTER" layoutX="33.0" layoutY="91.0" style="&#10;" text="Nombre" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="36.0" layoutY="140.0" style="&#10;" text="eMail" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="name" layoutX="265.0" layoutY="89.0" promptText="Nombre del pasajero" />
+            <TextField fx:id="email" layoutX="265.0" layoutY="138.0" promptText="eMail" />
+            <Label alignment="CENTER" layoutX="32.0" layoutY="188.0" style="&#10;" text="Teleono" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="phone" layoutX="265.0" layoutY="186.0" promptText="Telefono" />
+            <Button defaultButton="true" layoutX="389.0" layoutY="298.0" mnemonicParsing="false" onAction="#find" text="Buscar" />
+            <Button layoutX="288.0" layoutY="298.0" mnemonicParsing="false" onAction="#clearScreen" text="Limpiar" />
+            <Button layoutX="182.0" layoutY="298.0" mnemonicParsing="false" onAction="#goToHome" text="Cancelar" />
       </children>
     </AnchorPane>
   </children>
