--- a/src/main/resources/views/customer/customerHome.fxml
+++ b/src/main/resources/views/customer/customerHome.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Bloom?>
@@ -16,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.PassengerController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.CustomerController">
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="600.0">
    <children>
       <MenuBar>
@@ -62,12 +61,7 @@
                    <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="101.0" vgrow="SOMETIMES" />
                  </rowConstraints>
                   <children>
-                     <TableView prefHeight="290.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2">
-                       <columns>
-                         <TableColumn prefWidth="75.0" text="C1" />
-                         <TableColumn prefWidth="74.0" text="C2" />
-                       </columns>
-                     </TableView>
+                     <TableView fx:id="customerList" prefHeight="290.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
                   </children>
                </GridPane>
          </children>
