--- a/src/main/resources/views/customer/customerNew.fxml
+++ b/src/main/resources/views/customer/customerNew.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -16,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.PassengerController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.CustomerController">
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <MenuBar>
@@ -48,12 +47,7 @@
                   <Bloom threshold="0.95" />
                </effect>
             </Label>
-            <Label alignment="CENTER" layoutX="42.0" layoutY="85.0" style="&#10;" text="Proyecto" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" layoutX="42.0" layoutY="51.0" style="&#10;" text="Nombre" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+            <Label alignment="CENTER" layoutX="42.0" layoutY="65.0" style="&#10;" text="Nombre" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
                <font>
                   <Font size="18.0" />
                </font>
@@ -63,35 +57,28 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="46.0" layoutY="157.0" style="&#10;" text="Correo electronico" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+            <Label alignment="CENTER" layoutX="47.0" layoutY="171.0" style="&#10;" text="Correo electronico" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="46.0" layoutY="186.0" style="&#10;" text="Dirección" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+            <Label alignment="CENTER" layoutX="47.0" layoutY="222.0" style="&#10;" text="Dirección" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="51.0" layoutY="343.0" style="&#10;" text="Notas" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+            <Label alignment="CENTER" layoutX="51.0" layoutY="320.0" style="&#10;" text="Notas" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="49.0" layoutY="283.0" style="&#10;" text="Equipo de venta" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <TextField fx:id="name" layoutX="250.0" layoutY="49.0" promptText="Nombre completo" />
-            <ChoiceBox fx:id="project" layoutX="250.0" layoutY="83.0" prefWidth="150.0" />
+            <TextField fx:id="name" layoutX="250.0" layoutY="63.0" promptText="Nombre completo" />
             <TextField fx:id="phone" layoutX="250.0" layoutY="121.0" promptText="Número de telefono" />
-            <TextField fx:id="email" layoutX="250.0" layoutY="155.0" promptText="eMail" />
-            <TextField fx:id="addressStreet" layoutX="250.0" layoutY="184.0" promptText="Calle" />
-            <TextField fx:id="addressColony" layoutX="423.0" layoutY="184.0" promptText="Colonia" />
-            <TextField fx:id="addressCity" layoutX="250.0" layoutY="219.0" promptText="Ciudad" />
-            <TextField fx:id="addressPC" layoutX="423.0" layoutY="219.0" promptText="CP" />
-            <ChoiceBox fx:id="staff" layoutX="250.0" layoutY="281.0" prefWidth="150.0" />
+            <TextField fx:id="email" layoutX="250.0" layoutY="169.0" promptText="eMail" />
+            <TextField fx:id="addressStreet" layoutX="250.0" layoutY="220.0" promptText="Calle" />
+            <TextField fx:id="addressColony" layoutX="423.0" layoutY="220.0" promptText="Colonia" />
+            <TextField fx:id="addressCity" layoutX="250.0" layoutY="273.0" promptText="Ciudad" />
+            <TextField fx:id="addressPC" layoutX="423.0" layoutY="273.0" promptText="CP" />
             <TextArea fx:id="notes" layoutX="245.0" layoutY="343.0" prefHeight="71.0" prefWidth="345.0" />
             <Button layoutX="371.0" layoutY="440.0" mnemonicParsing="false" onAction="#save" text="Guardar" />
             <Button layoutX="261.0" layoutY="440.0" mnemonicParsing="false" onAction="#clearScreen" text="Limpiar" />
