--- a/src/main/resources/views/contract/contractHome.fxml
+++ b/src/main/resources/views/contract/contractHome.fxml
@@ -61,7 +61,7 @@
                    <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
                  </rowConstraints>
                   <children>
-                     <TableView prefHeight="299.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+                     <TableView fx:id="contractList" prefHeight="299.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
                   </children>
                </GridPane>
          </children>
