--- a/src/main/resources/views/home.fxml
+++ b/src/main/resources/views/home.fxml
@@ -45,11 +45,11 @@
                   <Bloom threshold="0.95" />
                </effect>
             </Label>
-            <Button layoutX="24.0" layoutY="108.0" mnemonicParsing="false" onAction="#goToTravel" prefHeight="89.0" prefWidth="173.0" text="Viajes" />
+            <Button layoutX="24.0" layoutY="108.0" mnemonicParsing="false" onAction="#goToTravel" prefHeight="89.0" prefWidth="173.0" text="Proyectos" />
+               <Button layoutX="217.0" layoutY="108.0" mnemonicParsing="false" onAction="#goToPassenger" prefHeight="89.0" prefWidth="173.0" text="Clientes" />
                <Button layoutX="412.0" layoutY="108.0" mnemonicParsing="false" onAction="#goToStaff" prefHeight="89.0" prefWidth="173.0" text="Staff" />
-               <Button layoutX="217.0" layoutY="108.0" mnemonicParsing="false" onAction="#goToPassenger" prefHeight="89.0" prefWidth="173.0" text="Pasajeros" />
-               <Button layoutX="326.0" layoutY="295.0" mnemonicParsing="false" onAction="#goToPayment" prefHeight="89.0" prefWidth="173.0" text="Pagos" />
                <Button layoutX="111.0" layoutY="295.0" mnemonicParsing="false" onAction="#goToContract" prefHeight="89.0" prefWidth="173.0" text="Contratos" />
+               <Button layoutX="326.0" layoutY="295.0" mnemonicParsing="false" onAction="#goToPayment" prefHeight="89.0" prefWidth="173.0" text="Pagos" />
          </children>
       </AnchorPane>
    </children>
