--- a/src/main/resources/views/project/projectHome.fxml
+++ b/src/main/resources/views/project/projectHome.fxml
@@ -49,7 +49,7 @@
                 <RowConstraints maxHeight="277.0" minHeight="10.0" prefHeight="266.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                     <TableView fx:id="projectList" onMouseClicked="#showCustomers" prefHeight="196.0" prefWidth="470.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+                     <TableView fx:id="projectList" prefHeight="196.0" prefWidth="470.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
                      <TableView fx:id="customerList" onMouseClicked="#showDetails" prefHeight="249.0" prefWidth="474.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS" />
                      <TableView fx:id="customerDetails" prefHeight="385.0" prefWidth="470.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.rowSpan="2" GridPane.vgrow="ALWAYS" />
                </children>
