--- a/src/main/resources/views/payment/paymentHome.fxml
+++ b/src/main/resources/views/payment/paymentHome.fxml
@@ -39,7 +39,7 @@
       </MenuBar>
       <AnchorPane prefHeight="493.0" prefWidth="600.0">
          <children>
-            <Label alignment="CENTER" graphicTextGap="5.0" layoutX="343.0" layoutY="9.0" style="&#10;" text="Pagos" textAlignment="CENTER" textFill="#1653ee" textOverrun="CENTER_ELLIPSIS" wrapText="false">
+            <Label alignment="CENTER" graphicTextGap="5.0" layoutX="412.0" layoutY="9.0" style="&#10;" text="Pagos" textAlignment="CENTER" textFill="#1653ee" textOverrun="CENTER_ELLIPSIS" wrapText="false">
                <font>
                   <Font name="AdobeHebrew-Regular" size="32.0" />
                </font>
@@ -49,7 +49,7 @@
             </Label>
             <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToNew" prefHeight="27.0" prefWidth="33.0" text="+" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
                <Button layoutX="269.0" layoutY="452.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" AnchorPane.bottomAnchor="13.5" AnchorPane.leftAnchor="269.0" AnchorPane.rightAnchor="257.5" />
-               <TextField layoutX="60.0" layoutY="15.0" onAction="#goToFind" prefHeight="27.0" prefWidth="232.0" promptText="Buscar Pago" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="15.0" />
+               <TextField layoutX="98.0" layoutY="15.0" onAction="#goToFind" prefHeight="27.0" prefWidth="232.0" promptText="Buscar Pago" AnchorPane.leftAnchor="98.0" AnchorPane.topAnchor="15.0" />
                <GridPane layoutY="61.0" prefHeight="316.0" prefWidth="600.0">
                  <columnConstraints>
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -61,9 +61,10 @@
                    <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
                  </rowConstraints>
                   <children>
-                     <TableView prefHeight="299.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+                     <TableView fx:id="paymentList" prefHeight="299.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
                   </children>
                </GridPane>
+               <Button layoutX="56.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToDelete" prefHeight="27.0" prefWidth="33.0" text="-" />
          </children>
       </AnchorPane>
    </children>
