--- a/src/main/resources/views/staff/staffHome.fxml
+++ b/src/main/resources/views/staff/staffHome.fxml
@@ -49,7 +49,7 @@
             </Label>
             <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToNew" prefHeight="27.0" prefWidth="33.0" text="+" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
                <Button layoutX="269.0" layoutY="452.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" AnchorPane.bottomAnchor="13.5" AnchorPane.leftAnchor="269.0" AnchorPane.rightAnchor="257.5" />
-               <TextField layoutX="60.0" layoutY="15.0" onAction="#goToFind" prefHeight="27.0" prefWidth="232.0" promptText="Buscar staff" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="15.0" />
+               <TextField layoutX="120.0" layoutY="15.0" onAction="#goToFind" prefHeight="27.0" prefWidth="232.0" promptText="Buscar staff" AnchorPane.leftAnchor="120.0" AnchorPane.topAnchor="15.0" />
                <GridPane layoutY="61.0" prefHeight="316.0" prefWidth="600.0">
                  <columnConstraints>
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -61,9 +61,10 @@
                    <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="101.0" vgrow="SOMETIMES" />
                  </rowConstraints>
                   <children>
-                     <TableView prefHeight="290.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+                     <TableView fx:id="staffList" prefHeight="290.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
                   </children>
                </GridPane>
+               <Button layoutX="62.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToDelete" prefHeight="27.0" prefWidth="33.0" text="-" />
          </children>
       </AnchorPane>
    </children>
