--- a/src/main/resources/views/project/projectHome.fxml
+++ b/src/main/resources/views/project/projectHome.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -15,7 +20,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="940.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.ProjectController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="940.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.ProjectController">
    <children>
       <MenuBar>
         <menus>
@@ -70,7 +75,15 @@
                   <Bloom />
                </effect></Button>
                <Button layoutX="436.0" layoutY="533.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="436.0" AnchorPane.rightAnchor="435.0" />
-               <TextField layoutX="71.0" layoutY="14.0" onAction="#goToFindTravel" prefHeight="26.0" prefWidth="277.0" promptText="Buscar por nombre" AnchorPane.leftAnchor="71.0" AnchorPane.topAnchor="14.0" />
+               <TextField layoutX="123.0" layoutY="16.0" onAction="#goToFindTravel" prefHeight="26.0" prefWidth="277.0" promptText="Buscar por nombre" AnchorPane.leftAnchor="123.0" AnchorPane.topAnchor="16.0" />
+            <Button layoutX="64.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToDelete" prefHeight="28.0" prefWidth="35.0" style="-fx-background-color: #1394FC;" text="-" textFill="WHITE">
+               <effect>
+                  <Bloom />
+               </effect>
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </children>
