--- a/src/main/resources/views/customer/customerHome.fxml
+++ b/src/main/resources/views/customer/customerHome.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -15,59 +20,62 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.CustomerController">
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="600.0">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.CustomerController">
    <children>
-      <MenuBar>
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-      <AnchorPane prefHeight="493.0" prefWidth="600.0">
-         <children>
-            <Label alignment="CENTER" graphicTextGap="5.0" layoutX="414.0" layoutY="9.0" style="&#10;" text="Cliente" textAlignment="CENTER" textFill="#9a1083" textOverrun="CENTER_ELLIPSIS" wrapText="false">
-               <font>
-                  <Font name="AdobeHebrew-Regular" size="32.0" />
-               </font>
-               <effect>
-                  <Bloom threshold="0.95" />
-               </effect>
-            </Label>
-            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToNew" prefHeight="27.0" prefWidth="33.0" text="+" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
-               <Button layoutX="269.0" layoutY="452.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" AnchorPane.bottomAnchor="13.5" AnchorPane.leftAnchor="269.0" AnchorPane.rightAnchor="257.5" />
-               <TextField layoutX="60.0" layoutY="15.0" onAction="#goToFindPassenger" prefHeight="27.0" prefWidth="232.0" promptText="Buscar cliente" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="15.0" />
-               <GridPane layoutY="61.0" prefHeight="316.0" prefWidth="600.0">
-                 <columnConstraints>
-                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                 </columnConstraints>
-                 <rowConstraints>
-                   <RowConstraints maxHeight="160.0" minHeight="0.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                   <RowConstraints maxHeight="329.0" minHeight="10.0" prefHeight="212.0" vgrow="SOMETIMES" />
-                   <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="101.0" vgrow="SOMETIMES" />
-                 </rowConstraints>
-                  <children>
-                     <TableView fx:id="customerList" prefHeight="290.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
-                  </children>
-               </GridPane>
-         </children>
-      </AnchorPane>
+   <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="600.0">
+      <children>
+         <MenuBar>
+           <menus>
+             <Menu mnemonicParsing="false" text="File">
+               <items>
+                 <MenuItem mnemonicParsing="false" text="Close" />
+               </items>
+             </Menu>
+             <Menu mnemonicParsing="false" text="Edit">
+               <items>
+                 <MenuItem mnemonicParsing="false" text="Delete" />
+               </items>
+             </Menu>
+             <Menu mnemonicParsing="false" text="Help">
+               <items>
+                 <MenuItem mnemonicParsing="false" text="About" />
+               </items>
+             </Menu>
+           </menus>
+         </MenuBar>
+         <AnchorPane prefHeight="493.0" prefWidth="600.0">
+            <children>
+               <Label alignment="CENTER" graphicTextGap="5.0" layoutX="414.0" layoutY="9.0" style="&#10;" text="Cliente" textAlignment="CENTER" textFill="#9a1083" textOverrun="CENTER_ELLIPSIS" wrapText="false">
+                  <font>
+                     <Font name="AdobeHebrew-Regular" size="32.0" />
+                  </font>
+                  <effect>
+                     <Bloom threshold="0.95" />
+                  </effect>
+               </Label>
+               <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToNew" prefHeight="27.0" prefWidth="33.0" text="+" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
+                  <Button layoutX="269.0" layoutY="452.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" AnchorPane.bottomAnchor="13.5" AnchorPane.leftAnchor="269.0" AnchorPane.rightAnchor="257.5" />
+                  <TextField layoutX="111.0" layoutY="14.0" onAction="#goToFindPassenger" prefHeight="27.0" prefWidth="232.0" promptText="Buscar cliente" AnchorPane.leftAnchor="111.0" AnchorPane.topAnchor="14.0" />
+                  <GridPane layoutY="61.0" prefHeight="316.0" prefWidth="600.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints maxHeight="160.0" minHeight="0.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="329.0" minHeight="10.0" prefHeight="212.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="101.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <TableView fx:id="customerList" prefHeight="290.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+                     </children>
+                  </GridPane>
+                  <Button layoutX="64.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToDelete" prefHeight="27.0" prefWidth="33.0" text="-" />
+            </children>
+         </AnchorPane>
+      </children>
+   </VBox>
    </children>
-</VBox>
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
