--- a/src/main/resources/views/contract/contractHome.fxml
+++ b/src/main/resources/views/contract/contractHome.fxml
@@ -71,6 +71,7 @@
                      </children>
                   </GridPane>
                   <Button layoutX="62.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToDelete" prefHeight="27.0" prefWidth="33.0" text="-" />
+                  <Button layoutX="15.0" layoutY="45.0" mnemonicParsing="false" onAction="#goToUpdate" prefHeight="27.0" prefWidth="81.0" text="Update" />
             </children>
          </AnchorPane>
       </children>
