--- a/src/main/resources/views/customer/customerHome.fxml
+++ b/src/main/resources/views/customer/customerHome.fxml
@@ -71,6 +71,7 @@
                      </children>
                   </GridPane>
                   <Button layoutX="64.0" layoutY="14.0" mnemonicParsing="false" onAction="#goToDelete" prefHeight="27.0" prefWidth="33.0" text="-" />
+                  <Button layoutX="14.0" layoutY="50.0" mnemonicParsing="false" onAction="#goToUpdate" prefHeight="27.0" prefWidth="83.0" text="Update" />
             </children>
          </AnchorPane>
       </children>
