--- a/src/main/resources/views/login.fxml
+++ b/src/main/resources/views/login.fxml
@@ -4,33 +4,28 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Bloom?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Circle?>
-<?import javafx.scene.text.Font?>
 
 <GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.muuyal.escala.billingmanagement.controller.LoginController">
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label alignment="CENTER" graphicTextGap="5.0" layoutX="264.0" layoutY="85.0" style="&#10;" text="Escala Travel" textAlignment="CENTER" textFill="#2c0404" wrapText="false">
-          <font>
-            <Font size="18.0" />
-          </font>
-               <effect>
-                  <Bloom threshold="0.95" />
-               </effect>
-        </Label>
-            <TextField fx:id="username" layoutX="237.0" layoutY="209.0" promptText="Usuario" />
-            <PasswordField fx:id="password" layoutX="237.0" layoutY="250.0" onAction="#login" promptText="Contraseña" />
+            <TextField fx:id="username" layoutX="237.0" layoutY="225.0" promptText="Usuario" />
+            <PasswordField fx:id="password" layoutX="237.0" layoutY="265.0" onAction="#login" promptText="Contraseña" />
             <Button layoutX="286.0" layoutY="316.0" mnemonicParsing="false" onAction="#login" text="Entrar" />
-            <Circle fill="DODGERBLUE" layoutX="314.0" layoutY="166.0" radius="34.0" stroke="BLACK" strokeType="INSIDE" />
                <Label fx:id="message" layoutX="200.0" layoutY="350.0" prefHeight="23.0" prefWidth="300.0" textFill="#e80c0c" />
+               <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="214.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../logo-negro%20.png" />
+                  </image>
+               </ImageView>
       </children>
     </AnchorPane>
   </children>
